Fixes footer alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ footer {
   position: absolute;
   text-align: center;
   bottom: 0;
+  width: 100vw;
 }
 
 h1,h2 {
